--- a/css/cake.css
+++ b/css/cake.css
@@ -21,7 +21,7 @@ header {
   height: 100%;
   position: relative;
   overflow: hidden;
-  background: url(https://unsplash.imgix.net/45/ZLSw0SXxThSrkXRIiCdT_DSC_0345.jpg?q=75&w=1080&h=1080&fit=max&fm=jpg&auto=format&s=857f07b76abac23a7fb7161cc7b12a46) center no-repeat;
+  background-image: url("images/banner.png");
   /* Image Credit: Unsplash.me */
   background-size: cover;
 }
