--- a/css/cake.css
+++ b/css/cake.css
@@ -76,9 +76,7 @@ header .overlay {
   opacity: 0;  -webkit-filter: blur(4px);
 }
 
-img{
-  margin-right:20px
-}
+
 
 .site {
   padding: 20em 0;
@@ -127,48 +125,75 @@ nav .brand-logo {
 }
 
 /* fitness plan section */
-.fitness-box { 
-  width: 450px;
+/* apply a natural box layout model to all elements */
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.plan-icon { 
   height: 450px;
 }
-
-.fitness-text { 
-  text-align: center;
+.my_container ul {
+  list-style: none;
+  margin: 0 0 0 0;
+  padding: 0 0 0 0;
+  clear: both;
 }
-
-.fitness-icon { 
-  width: 400px;
-  height: 400px;
- 
+.my_container ul .block {
+  width: 33.33%;
+  height: auto;
+  position: relative;
+  float: left;
+  margin: 0 0 0 0;
+  padding: 0 0 20% 0;
+  transition: 0.8s ease;
 }
-
-#fitnessPlan-feed { 
-  display: flex;
-  flex-wrap: wrap;
-  .fitnessPlan-item { 
-    margin: 0;
-   
-    box-sizing: border-box;
-    position: relative;
-    overflow: hidden;
-    
-    .plan-name{ 
-      position: absolute; 
-      bottom: 0;
-      left: 0;
-      right: 0;
-      color: #eee;
-      background: #333;
-      width: 100%;
-      
-      opacity: 0;
-      }
-    &:hover{ 
-      .plan-name{ 
-        opacity: 1;
-        max-height: 10%;
-        }
-      }
-    }
+.my_container ul .block:hover span {
+  height: 50%;
+}
+@media screen and (max-width: 1280px) {
+  .my_container ul .block {
+    width: 25%;
+    padding-bottom: 25%;
   }
-
+}
+@media screen and (max-width: 1024px) {
+  .my_container ul .block {
+    width: 33.33%;
+    padding-bottom: 33.33%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .my_container ul .block {
+    width: 50%;
+    padding-bottom: 50%;
+  }
+}
+@media screen and (max-width: 360px) {
+  .my_container ul .block {
+    width: 100%;
+    padding-bottom: 100%;
+  }
+}
+.my_container ul .block img {
+  max-width: none;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.my_container ul .block span {
+  width: 100%;
+  height: 3rem;
+  line-height: 3rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 0 1rem;
+  font-size: 1.3rem;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.5);
+  transition: 0.8s ease;
+}
