--- a/css/cake.css
+++ b/css/cake.css
@@ -1,5 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Lato);
-
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,200,300,800);
 html, body {
   padding: 0;
   margin: 0;
@@ -135,6 +135,7 @@ nav .brand-logo {
 .plan-icon { 
   height: 450px;
 }
+
 .my_container ul {
   list-style: none;
   margin: 0 0 0 0;
@@ -184,16 +185,107 @@ nav .brand-logo {
   top: 0;
   left: 0;
 }
-.my_container ul .block span {
+
+/* Caption Overlay */
+figure.plan-snip .plan-icon {
+  max-width: 100%;
+  opacity: 1;
   width: 100%;
-  height: 3rem;
-  line-height: 3rem;
+  -webkit-transition: opacity 0.35s;
+  transition: opacity 0.35s;
+}
+
+figure.plan-snip figcaption {
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 0 1rem;
-  font-size: 1.3rem;
-  color: #fff;
-  background: rgba(0, 0, 0, 0.5);
-  transition: 0.8s ease;
+  padding: 30px 3em;
+  width: 100%;
+  height: 100%;
 }
+
+figure.plan-snip figcaption::before {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  bottom: 30px;
+  left: 100%;
+  border-left: 4px solid rgba(255, 255, 255, 0.8);
+  content: '';
+  opacity: 0;
+  background-color: rgba(255, 255, 255, 0.5);
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-transition-delay: 0.6s;
+  transition-delay: 0.6s;
+}
+
+figure.plan-snip h2,
+figure.plan-snip p {
+  margin: 0 0 5px;
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s,-webkit-transform 0.35s,-moz-transform 0.35s,-o-transform 0.35s,transform 0.35s;
+}
+
+figure.plan-snip h2 {
+  word-spacing: -0.15em;
+  font-weight: 300;
+  text-transform: uppercase;
+  -webkit-transform: translate3d(30%, 0%, 0);
+  transform: translate3d(30%, 0%, 0);
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+
+figure.plan-snip h2 span {
+  font-weight: 800;
+}
+
+figure.plan-snip p {
+  font-weight: 200;
+  -webkit-transform: translate3d(0%, 30%, 0);
+  transform: translate3d(0%, 30%, 0);
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+}
+
+figure.plan-snip a {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  color: #ffffff;
+}
+
+figure.plan-snip:hover .plan-icon {
+  opacity: 0.3;
+}
+
+figure.plan-snip:hover figcaption h2 {
+  opacity: 1;
+  -webkit-transform: translate3d(0%, 0%, 0);
+  transform: translate3d(0%, 0%, 0);
+  -webkit-transition-delay: 0.4s;
+  transition-delay: 0.4s;
+}
+
+figure.plan-snip:hover figcaption p {
+  opacity: 0.9;
+  -webkit-transform: translate3d(0%, 0%, 0);
+  transform: translate3d(0%, 0%, 0);
+  -webkit-transition-delay: 0.6s;
+  transition-delay: 0.6s;
+}
+
+figure.plan-snip:hover figcaption::before {
+  background: rgba(255, 255, 255, 0);
+  left: 30px;
+  opacity: 1;
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+}
+
+
+
